tests/compile_fail/unit_no_bidirectional_default.stderr
error[E0277]: the trait bound `UnitA: From<UnitB>` is not satisfied
  --> tests/compile_fail/unit_no_bidirectional_default.rs:13:19
   |
13 |     let _: UnitA = b.into();
   |                      ^^^^ unsatisfied trait bound
   |
help: the trait `From<UnitB>` is not implemented for `UnitA`
  --> tests/compile_fail/unit_no_bidirectional_default.rs:3:1
   |
 3 | struct UnitA;
   | ^^^^^^^^^^^^
   = note: required for `UnitB` to implement `Into<UnitA>`
